# metaqs-main

./: .env.example  .gitignore  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.ssl.yml  docker-compose.yml  init_letsencrypt.sh  pyproject.toml
.github/workflows/: build_fastapi.yml  codeql-analysis.yml  merge_to_dev.yml  merge_to_main.yml  push.yml  push_fastapi.yml
dbt/: .dockerignore  Dockerfile  README.md  dbt_project.yml  docker-compose.yml  profiles.yml
dbt/alembic/: env.py
dbt/macros/: clear_state.sql  clear_state_store.sql  helpers.sql
dbt/models/: sources.yml
dbt/seeds/: schema.yml
dbt/snapshots/: missing_fields_counts.sql
docs/: 404.html  README.md  analytics.rst  architecture.rst  build_confluence.sh  conf.py  dashboard.rst  index.html  index.rst  main.rst  overview.rst  setup.rst
docs/analytics/: index.html
docs/backup/: index.html
docs/dashboard/: index.html
docs/fastapi/: index.html
docs/info/: index.html
docs/operations/: index.html
docs/recovery/: index.html
docs/services/: index.html
fastapi/: .bash_history  .dockerignore  .env.example  docker-compose.elastic.yml  docker-compose.yml  pyproject.toml
nginx/: .htpasswd  gzip_params  nginx-ssl.conf.template  nginx.conf.dev.template  nginx.conf.template  proxy_params
scripts/: crontab  local_curl.sh  run.sh
src/: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.fastapi.yml  docker-compose.redis.yml  docker_log  languagetool-swagger.json  prestart.sh  pyproject.toml
src/app/: .env.example  http.py  main.py  models.py  score.py
src/app/analytics/: __init__.py  analytics.py  resource_import.py  rpc_client.py  search_stats.py  spellcheck.py
src/app/api/: __init__.py  api.py  auth.py  util.py
src/app/api/analytics/: analytics.py  background_task.py  models.py  stats.py  storage.py
src/app/api/collections/: collection_validation.py  counts.py  descendants.py  material_counts.py  material_validation.py  missing_attributes.py  missing_materials.py  models.py  oer.py  pending_collections.py  pending_materials.py  quality_matrix.py  score.py  statistics.py  tree.py  utils.py  vocabs.py
src/app/api/languagetool/: api.py
src/app/api/quality_matrix/: collections.py  meta_hierachy.py  models.py  quality.py  quality_matrix.py  replication_source.py  timeline.py  utils.py
src/app/api/score/: models.py  score.py
src/app/api/v1/: __init__.py
src/app/api/v1/analytics/: analytics.py  api.py  background_tasks.py
src/app/api/v1/realtime/: api.py  collections.py  learning_materials.py
src/app/core/: config.py  constants.py  custom_logging.py  errors.py  logging.py  meta_hierarchy.py  models.py  portals.py  tasks.py  util.py  utils.py  vocabs.py
src/app/crud/: __init__.py  collection.py  elastic.py  languagetool.py  learning_material.py  quality_matrix.py  replication_sources.py  stats.py  util.py
src/app/db/: core.py  tasks.py
src/app/elastic/: __init__.py  attributes.py  dsl.py  elastic.py  fields.py  filters.py  search.py  utils.py
src/app/models/: base.py  collection.py  elastic.py  learning_material.py  quality_matrix.py  stats.py  util.py
src/app/pg/: metadata.py  queries.py  tasks.py  util.py
src/app/quality_table/: es_testing.sh  output.json  output.py  output_i18n.json  output_sources.json
superset/: Dockerfile  superset.db
tests/: conftest.py  pyproject.toml  test_api.py  test_elastic_search.py  test_quality_matrix.py  test_real_data.py  test_search.py  test_stats.py
(+116 files in other folders)
